1.20.5/.6 update (#4534)