@@ -187,7 +187,7 @@ public class EChestFarmer extends Module {
     private void onRender(Render3DEvent event) {
         if (target == null || !render.get() || Modules.get().get(PacketMine.class).isMiningBlock(target)) return;
 
-        Box box = SHAPE.getBoundingBoxes().get(0);
+        Box box = SHAPE.getBoundingBoxes().getFirst();
         event.renderer.box(target.getX() + box.minX, target.getY() + box.minY, target.getZ() + box.minZ, target.getX() + box.maxX, target.getY() + box.maxY, target.getZ() + box.maxZ, sideColor.get(), lineColor.get(), shapeMode.get(), 0);
     }
 }
